--- a/EquipmentFormatter/EquipmentFormatter.csproj
+++ b/EquipmentFormatter/EquipmentFormatter.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="LanguageExt.Core" Version="3.4.14" />
+  </ItemGroup>
+
 </Project>
